--- a/style.css
+++ b/style.css
@@ -147,6 +147,7 @@ h2{
 ul {
     padding-left: 1%;
     padding-right: 1%;
+    overflow: hidden;
     
 }
 li {
@@ -155,6 +156,7 @@ li {
     padding-top:0;
     padding:18px 0;
     border-bottom: 2px solid grey;
+    
 }
 
 
